<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>theoTracker</groupId>
  <artifactId>theoTracker</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
  	<maven.compiler.source>11</maven.compiler.source>
  	<maven.compiler.target>11</maven.compiler.target>
  </properties>
  <dependencies>
  	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
	<dependency>
	    <groupId>com.google.code.gson</groupId>
	    <artifactId>gson</artifactId>
	    <version>2.9.0</version>
	</dependency>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>11</version>
    </dependency>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-media</artifactId>
        <version>11</version>
    </dependency>
  </dependencies>
  <build>
  	<plugins>
	    <!-- sets up the version of Java you are running -->
	    <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>3.8.0</version>
	        <configuration>
	            <source>11</source>
		        <target>11</target>
		        <verbose>true</verbose>
	        </configuration>
	        <dependencies>
	            <dependency>
	                <groupId>org.ow2.asm</groupId>
	                <artifactId>asm</artifactId>
	                <version>6.2.1</version>
	            </dependency>
	        </dependencies>
	    </plugin>
  	</plugins>
  </build>
</project>